--- a/src/app/Pages/Interfaces_Employee/projectDetalis/components/upload-files/upload-files.html
+++ b/src/app/Pages/Interfaces_Employee/projectDetalis/components/upload-files/upload-files.html
@@ -5,43 +5,36 @@
       <div class="py-4 pt-0 mx-0 row project-card">
         <div class="col-xl-8 col-lg-9 text-md-start text-center">
           <div class="row">
-            <h5 class="fw-bold mb-3 ps-0">SOCIAL MEDIA POSTS</h5>
+            @switch (aboutproject()?.projectType) {
+            @case (0) { <h5 class="fw-bold mb-3 ps-0">Simple Prpject</h5>}
+            @case (1) { <h5 class="fw-bold mb-3 ps-0">Social Media</h5>
+            }
+            @case (2) { <h5 class="fw-bold mb-3 ps-0">Media Buying</h5>
+            }
+            }
             <div class="me-0 pe-0 col-lg-2 ps-0 text-lg-start text-center">
-              <img
-                [src]="baseimageUrl + aboutproject()?.clientImage"
-                class="rounded-2"
-                alt=""
-                width="114"
-                height="114"
-              />
+              <img [src]="baseimageUrl + aboutproject()?.clientImage" class="rounded-2 w-100" alt="" width="114"
+                height="114" />
             </div>
             <div class="col ps-lg-3 pt-xl-2 px-0">
               <h6 class="mb-0 mt-lg-0 mt-3 text-lg-start text-center">
                 {{ aboutproject()?.clientName }}
               </h6>
               <p class="mb-2 low text-lg-start text-center">{{ aboutproject()?.projectTitle }}</p>
-              <h6 class="mb-1 text-start">Project Description</h6>
-              <p
-                class="mb-0 low lh-1 mb-2 px-lg-0 mx-lg-0 text-start"
-                style="white-space: pre-line"
-              >
-                The {{ aboutproject()?.projectDescription }}
+              <h6 class="mb-1 text-start">About {{ aboutproject()?.clientName }}</h6>
+              <p class="mb-0 low lh-1 mb-2 px-lg-0 mx-lg-0 text-start" style="white-space: pre-line">
+                 {{ aboutproject()?.clientAbout }}
               </p>
             </div>
           </div>
         </div>
         <div class="col-xl-4 col-lg-3 text-lg-end px-0">
-          <p class="small-2 mb-1 me-2">ASSIGENED TO</p>
+          <p class="small-2 mb-1 ">ASSIGENED TO</p>
           <div class="d-flex flex-lg-row-reverse gap-2">
             @for (employee of aboutproject()?.employees; track employee.id) {
             <div class="">
-              <img
-                [src]="baseimageUrl + employee.imageUrl"
-                class="rounded-2"
-                alt=""
-                width="63.15593719482422"
-                height="63"
-              />
+              <img [src]="baseimageUrl + employee.imageUrl" class="rounded-2" alt="" width="63.15593719482422"
+                height="63" />
             </div>
             }
           </div>
@@ -51,38 +44,20 @@
       <p class="low small mb-1 text-start" style="white-space: pre-line">
         “ {{ aboutproject()?.projectDescription }} “
       </p>
-      <h6 class="pt-4">ATTACHMENTS</h6>
-      <div class="d-flex flex-wrap  gap-2">
+
+      <div class="d-flex mt-3 flex-wrap gap-2">
         @for (file of aboutproject()?.attachments; track file.fileUrl ; let i = $index) {
-          @if (isImage(file.fileUrl)) {
-          <div class="d-flex align-items-center gap-2 p-2 rounded">
-            <img
-              [src]="getFileUrl(file.fileUrl)"
-              alt="attachment"
-              class="rounded"
-              style="width: 120px; height: 120px; object-fit: cover"
-            />
+        @if (isPdf(file.fileUrl)) {
+        <a [href]="getFileUrl(file.fileUrl)" target="_blank" [download]="getFileName(file.fileUrl)"
+          class="file-card d-flex align-items-center gap-2">
+          <img class="attach-img" src="assets/img/new-document 2.svg" alt="" />
+          <div class="file-info text-lg-start">
+            <div class="file-name">File PDf {{ i }}</div>
+            <div class="file-size">1MB</div>
           </div>
-          } 
+        </a>
+
         }
-      </div>
-            <div class="d-flex mt-3 flex-wrap gap-2">
-        @for (file of aboutproject()?.attachments; track file.fileUrl ; let i = $index) {
-         @if (isPdf(file.fileUrl)) {
-          <a
-            [href]="getFileUrl(file.fileUrl)"
-            target="_blank"
-            [download]="getFileName(file.fileUrl)"
-            class="file-card d-flex align-items-center gap-2"
-          >
-            <img class="attach-img" src="assets/img/new-document 2.svg" alt="" />
-            <div class="file-info text-lg-start">
-              <div class="file-name">File PDf {{ i }}</div>
-              <div class="file-size">1MB</div>
-            </div>
-          </a>
-          
-          } 
         }
       </div>
       <p class="small-2 mt-4 pt-2">Add Attachment</p>
@@ -104,39 +79,36 @@
           </div>
         </div>
 
-        <button
-          (click)="uploadFiles()"
-          id="uploadButton"
-          class="border-0 rounded-3 w-100 text-white small pt-2 mt-4"
-          style="background-color: #0b6b6e"
-        >
+        <button (click)="uploadFiles()" id="uploadButton" class="border-0 rounded-3 w-100 text-white small pt-2 mt-4"
+          style="background-color: #0b6b6e">
           UPLOAD
         </button>
 
-        <input
-          type="file"
-          id="fileInput"
-          hidden
-          #fileInput
-          (change)="onFileSelected($event)"
-          multiple
-        />
+        <input type="file" id="fileInput" hidden #fileInput (change)="onFileSelected($event)" multiple />
       </div>
 
       <!-- drag -->
       <div class="row mx-0">
         <div class="col-6 text-start mt-5 pt-md-3 pt-4 ps-0">
-          <button
-            class="border-0 rounded-3 text-white small px-md-4 px-3 pt-1 mt-4 end-but"
-            style="background-color: #0b6b6e"
-          >
-            <p class="mb-0 mx-auto">COMPLETED</p>
+          <button class="border-0 rounded-3 text-white small px-md-4 px-3 pt-1 mt-4 end-but"
+            style="background-color: #0b6b6e">
+            @switch (aboutproject()?.projectStatus) {
+            @case (0) { <p class="mt-0 mb-0">In Progress </p> }
+            @case (1) { <p class="mt-0 mb-0">Paused</p> }
+            @case (2) { <p class="mt-0 mb-0">Completed </p> }
+            }
           </button>
         </div>
         <div class="col-6 text-end mt-5 pt-md-3 pt-4 pe-0">
-          <p class="mb-0 small">14, OCT 24</p>
-          <p class="small mb-0">Brand Identity</p>
-          <img class="image" src="assets/img/4blue-star.png" alt="" />
+          <p class="mb-0 small">{{aboutproject()?.deadLine | date }}</p>
+          <p class="small mb-0">{{aboutproject()?.clientName}}</p>
+          <div class="stars mt-2 justify-content-end">
+            @for (s of [1, 2, 3, 4, 5]; track $index) {
+            <button class="star-btn" [class.active]="s <= (aboutproject()?.projectFeedBack ?? 0)">
+              <i class="fa fa-star"></i>
+            </button>
+            }
+          </div>
         </div>
       </div>
     </div>
@@ -144,6 +116,16 @@
 </div>
 
 
-<app-todolist/>
+
+@if(aboutproject()?.projectType == 1){
+<app-posts />
+
+}
+@if(aboutproject()?.projectType == 2){
+<app-media-buying />
+
+}
 <app-chat/>
+
+<app-todolist/>
 <app-feedback />
