--- a/src/app/Pages/projects/editproject/editproject.html
+++ b/src/app/Pages/projects/editproject/editproject.html
@@ -15,7 +15,7 @@
 <input #descInput type="text" class="text-white w-100 mt-4 ps-0" placeholder="Project Description" />
         <div class="CreateAccount-box  px-0 mt-0 py-0">
                   <!-- Client Title -->
-        <p class="mt-4 mb-1 title">Client Title</p>
+        <p class="mt-4 mb-1 title">Project Status </p>
         <div *ngFor="let title of options" class="d-flex mt-1 align-items-center">
           <button
             type="button"
@@ -150,6 +150,31 @@
               </div>
             </div>
           </div>
+          <div class="row my-4 px-0">
+  <div class="div col me-lg-5 px-0" *ngIf="projectType() != 0">
+    <p class="">Repeated Payment</p>
+    <input #Month type="number" class="text-white w-100 ps-0 py-1 mt-2" placeholder="Repeated Count" />
+  </div>
+
+  <div class="col"[ngClass]="{
+    'col-lg-8': projectType() === 1 ||projectType() === 2
+  }">
+    <p class="">Payment</p>
+    <div
+      class="text-white text-start w-100 d-flex align-items-end justify-content-between rounded-3"
+      style="background: linear-gradient(90deg, #2D2D2D00 0%, #00BEC540 65%); font-size: 16px; border: 0.1px solid rgba(255, 255, 255, 0.425);"
+    >
+      <div class="info flex-grow-1">
+        <input    [value]="paymentAmount()"
+        (input)="paymentAmount.set($any($event.target).value)" type="number" class="text-white w-100 py-2 ps-3" placeholder="Payment" />
+      </div>
+      <div class="account ps-4">
+        <p class="m-0 py-2 pe-3">USD</p>
+      </div>
+    </div>
+  </div>
+</div>
+
         </div>
       </div>
     </div>
