--- a/src/app/Pages/client-profile/client-profile.html
+++ b/src/app/Pages/client-profile/client-profile.html
@@ -22,7 +22,7 @@
     </div>
     <div class="ms-xl-5 ms-md-4 ms-3 w-100">
       <h5 class="mb-md-2 mb-1">ABOUT {{ aboutclient()?.name }}</h5>
-      <p class="low small lh-1 mb-lg-4 pb--md-2" style="white-space: pre-line">
+      <p class="low small  mb-lg-4 pb--md-2" style="white-space: pre-line">
         The design was great maybe the {{ aboutclient()?.about }}
       </p>
       <h5 class="mb-2">SERVICES</h5>
