--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2085,3 +2085,14 @@ overflow-x: hidden;
 .date-separator:first-of-type::before {
   display: none !important;
 }
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: #000 !important;
+  caret-color: #000;
+  box-shadow: 0 0 0px 1000px transparent inset !important;
+  background: transparent !important;
+}
