--- a/src/app/Pages/projects/projectDetalis/components/posts/posts.scss
+++ b/src/app/Pages/projects/projectDetalis/components/posts/posts.scss
@@ -100,3 +100,11 @@
 .blue.btnlink{
   cursor: pointer;
 }
+.btn{
+      background: rgba(11, 107, 110, 0.2);
+    padding: 10px 10px;
+    border-radius: 8px;
+    cursor: pointer;
+    width: 100px;
+    color: #fff;
+}
