--- a/src/app/Pages/Interfaces_Employee/projectDetalis/components/chat/chat.html
+++ b/src/app/Pages/Interfaces_Employee/projectDetalis/components/chat/chat.html
@@ -39,7 +39,7 @@
             <p class="username">{{ message.username }}</p>
 
             <div class="message-content-wrapper">
-              <img [src]="baseurl  + message.userImageUrl " class="user-img" />
+              <img [src]="message.userImageUrl ? baseurl  + message.userImageUrl :  'assets/img/chat.png'" class="user-img" />
 
               <div class="d-flex flex-column-reverse gap-1 w-100 message-content">
                 <p class="message-content fst-italic">{{ message.text }}</p>
