--- a/src/app/Pages/service/service.html
+++ b/src/app/Pages/service/service.html
@@ -1,4 +1,5 @@
-<div class="d-flex justify-content-between align-items-center headerText">
+<div class="ServiceAPP">
+  <div class="d-flex justify-content-between align-items-center headerText">
   <h2 class="pt-sm-4 logout" style="color: #00bec5; cursor: pointer;" routerLink="/addservice">
     Add Service
     <i class="fa-solid fa-arrow-right fs-5" style="color: #00bec5;"></i>
@@ -41,4 +42,5 @@
   } 
 
 
+</div>
 </div>
