--- a/src/app/Pages/projects/projects-profile/projects-profile.html
+++ b/src/app/Pages/projects/projects-profile/projects-profile.html
@@ -51,7 +51,7 @@
                     <div class="col-lg-9 col-xl-8">
                         <div class="row">
                             @switch (project.projectType) {
-                            @case (0) { <h5 class="fw-bold mb-3 ps-0">Simple Project</h5>}
+                            @case (0) { <h5 class="fw-bold mb-3 ps-0">One time  Project</h5>}
                             @case (1) { <h5 class="fw-bold mb-3 ps-0">Social Media</h5>
                             }
                             @case (2) { <h5 class="fw-bold mb-3 ps-0">Media Buying</h5>
