--- a/src/app/Pages/client/client.scss
+++ b/src/app/Pages/client/client.scss
@@ -5,7 +5,19 @@
         object-fit: cover;
 
 }
-
+.booked {
+  color: #0b6b6e;
+  font-weight: 900 ;
+}
+.seletType{
+  background: #0B6B6E33;
+ padding: 10px 10px;
+  border-radius: 8px;
+  cursor: pointer;
+}
+.active{
+background: #0B6B6E;
+}
 .card {
   position: relative;
   overflow: hidden; // عشان ما يخرجش أي جزء برا الكارت
@@ -49,4 +61,36 @@ ease;
 .card-img-top{
         object-fit: cover;
 
+}
+.bottomBox h6{
+  font-size: 125px;
+  line-height: 1.3;
+    height: 100px;
+}
+.team .right-box h5 {
+  font-size: 90px !important;
+  color: var(--blue);
+  height: 65px;
+}
+.typeClient{
+  position: absolute;
+  left: 5px;
+  top: 5px;
+  min-width: 82px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+opacity: 1;
+
+border-radius: 5px;
+background: #171818;
+h6{
+font-weight: 700;
+font-size: 10px;
+line-height: 100%;
+letter-spacing: 0%;
+ color: #00BEC5;margin: 0;
+
+}
 }
