--- a/src/app/Pages/client-profile/Components/feedback-client/feedback-client.html
+++ b/src/app/Pages/client-profile/Components/feedback-client/feedback-client.html
@@ -2,63 +2,59 @@
     <div class=" " style="background-image: none;">
         <h1 class="mb-4 text-end mt-5 px-0 ">FEEDBACKS</h1>
         <div class="p-lg-5 p-4 pb-5 rounded-3 g-4 row feedback-box mb-5 pe-lg-4">
-
-            <div class="mt-0 col-11 text-end pe-3 w-100">
-                <div class="dropdown">
-                    <div class="select" (click)="toggleMenu()">
-                        <div class="caret">
-                            <i class="fa-solid fa-angle-down fs-5" [class.rotate]="isOpen" style="color: #00bec5;">
-                            </i>
-                        </div>
-                        <span class="selected fs-2">{{ selected }}</span>
-
+            <div class="col-1 p-0 mt-0">
+                <p class="mb-0">AVERAGE </p>
+                <h2 class="mb-0">FEEDBACK</h2>
+                <div class="d-flex align-items-center mt-0">
+                    <div class="stars">
+                        @for (s of [1, 2, 3, 4, 5]; track $index) {
+                        <button class="star-btn" [class.active]="s <= 1">
+                            <i class="fa fa-star"></i>
+                        </button>
+                        }
                     </div>
-                    <ul class="p-3 rounded-3 menu list-unstyled text-end" [class.menu-open]="isOpen">
-                        <li *ngFor="let option of options" (click)="selectOption(option)"
-                            [class.active]="selected === option">
-                            {{ option }}
-                        </li>
-                    </ul>
-                    <p class="small mb-0">KEEP THE GOOD WORK!!</p>
                 </div>
             </div>
+   
             <div class="feed-boxfeed px-0">
-                @for (item of feedbacks; track $index) {
-                <div class="p-3 py-3 mx-0 mt-4 row rounded-3 feedback-card">
+                
+                   @for (feedback of Feedbacks(); track  $index ; let i = $index) {
+                    <div class="p-3 py-3 mx-0 mt-4 row rounded-3 feedback-card cr">
                     <div class="col-xl-8 col-9">
-                        <div class="row">
+                        <div class="row ">
                             <div class="me-xxl-0 me-lg-3 px-0 col-lg-2 col-sm-1 me-4 me-lg-0">
-                                <img [src]="item.logo" alt="logo">
+                                <img src="assets/img/half-logo.svg" alt="">
                             </div>
                             <div class="col-lg-9 col-sm-11 col ps-xl-0 ps-sm-4 ps-md-0 text px-0">
-                                <h6 class="mt-md-0 mt-2 mb-1">{{ item.title }}</h6>
-                                <p class="mb-0 low lh-2 mb-2" style="white-space: pre-line;">
-                                    {{ item.comment }}
-                                </p>
+                                <h6 class="mt-md-0 mt-2 mb-1">{{feedback.projectName}}</h6>
+                                <p class="mb-0 low lh-2 mb-2" style="white-space: pre-line;">“{{feedback.questionTow}}”</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-xl-4 col-3 text-end px-0">
-                        <p class="small-2 mb-0">{{ item.date }}</p>
-                        <p class="mb-1 small">{{ item.category }}</p>
-                        <img class="img-low" [src]="item.rating" alt="rating">
+                        <p class="small-2  mb-0">{{feedback.dateTime | date}}</p>
+                        <p class="mb-1 small">{{feedback.clientName}}</p>
+                        <div class="stars mt-2 justify-content-end">
+                            @for (s of [1, 2, 3, 4, 5]; track $index) {
+            <button class="star-btn" [class.active]="s <= feedback.overAllRate">
+                                <i class="fa fa-star"></i>
+                            </button>
+                            }
+                        </div>
                     </div>
                 </div>
+                     
+                   }
+                        @empty {
+                  <div class="py-5 d-flex justify-content-center align-items-center">
+                                            <h2 class="mb-0" style="max-height: 30px;">No data available at the moment .</h2>
+
+                  </div>
                 }
-
             </div>
-
-            <div class="row pe-1">
-                <div class="col-1 p-0 mt-lg-5 mt-4 pt-lg-1 pt-2">
-                    <p class="mb-0">AVERAGE </p>
-                    <h2 class="mb-0">FEEDBACK</h2>
-                    <img class="star" src="assets/img/4blue-star.png" alt="">
-                </div>
-                <div class="col px-0">
-                    <h1 class="text-end pe-0 date">2024</h1>
-                </div>
-            </div>
+        <h1 class="text-end pe-0 date">{{ currentYear }}</h1>
         </div>
+
 
     </div>
 </div>
