--- a/src/app/Pages/projects/projects/projects.html
+++ b/src/app/Pages/projects/projects/projects.html
@@ -61,7 +61,7 @@
                     <div class="flex-wrap  pb-2 rounded d-flex  gap-4 mb-2">
                         <div class="text-center col seletType " [class.active]="selectedProjectType() === 0"
                             (click)="selectProjectType(0)">
-                            <p class="mb-0">One time  Project</p>
+                            <p class="mb-0">One time  </p>
                         </div>
 
                         <div class="text-center col seletType " [class.active]="selectedProjectType() === 1"
